# azure-osconfig

src/adapters/mc/: CMakeLists.txt  Common.h  OsConfig.schema.mof  OsConfigResource.c  OsConfigResource.h  schema.c
src/adapters/mc/asb/: CMakeLists.txt
src/adapters/mc/compliance/: Baseline.c  CMakeLists.txt  component.c
src/adapters/mc/compliance/example/: CMakeLists.txt  ComplianceExample.json  ComplianceExample.mof  MOFGenerator.py  compliance.mof
src/adapters/mc/ssh/: CMakeLists.txt  component.c
src/common/: CMakeLists.txt
src/common/base64/: CMakeLists.txt  base64.c
src/common/commonutils/: CommonUtils.h  ConfigUtils.c  FileUtils.c
src/common/compliance/: CMakeLists.txt  Compliance.cpp  Compliance.h  ComplianceInt.hpp  audits.cpp  gen_procedures_map.py
src/common/compliance/procedures/: audits.cpp  remediations.cpp
src/common/logging/: Logging.h
src/modules/: CMakeLists.txt
src/modules/compliance/: CMakeLists.txt  README.md  Ubuntu-22.04-v2.0.0.json  osconfig_desired.json  policy.json
src/modules/compliance/src/lib/: CMakeLists.txt  ComplianceEngine.cpp  ComplianceEngine.hpp  ComplianceInterface.cpp  ComplianceInterface.hpp  Evaluator.cpp  Evaluator.hpp  JSON.cpp  JSON.hpp  Optional.hpp  Procedure.cpp  Procedure.hpp  Result.hpp  TypeTraits.hpp  gen_procedures_map.py
src/modules/compliance/src/lib/procedures/: audits.cpp  remediations.cpp
src/modules/compliance/src/so/: CMakeLists.txt  ComplianceModule.c
src/modules/compliance/tests/: CMakeLists.txt  ComplianceTests.cpp
src/modules/configuration/src/lib/: Configuration.c
src/modules/mim/: compliance.json
src/modules/test/recipes/: ComplianceTests.json
src/platform/: MmiClient.c  ModulesManager.c
src/platform/inc/: MmiClient.h
